Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Adreces i contactes",
     "admin": "Administrador",
     "administrator": "Administrador",
+    "adult": "Adult",
     "advanced": "Avançat",
     "agent": "Agent",
     "agent-commission-info": "Només s'aplicarà a l'agent seleccionat",
@@ -197,6 +198,8 @@
     "carrier": "Transportista",
     "carriers": "Transportistes",
     "cash": "Efectiu",
+    "categories": "Categories",
+    "category": "Categoria",
     "cc": "CC",
     "center": "Centre",
     "change": "Canviar",
@@ -205,6 +208,7 @@
     "charts": "Gràfiques",
     "check-table": "Error en comprovar la taula '%tableName%'",
     "checked": "Comprovat",
+    "children": "Nen",
     "children-accounts": "Comptes Fills",
     "choose-currency": "Tria la moneda",
     "choose-doc-type": "Tria el tipus de document",
