--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Adressen und Kontakte",
     "admin": "Administrator",
     "administrator": "Verwalter",
+    "adult": "Adulto",
     "advanced": "Avanzado",
     "agent": "Agent",
     "agent-commission-info": "gilt nur für den ausgewählten Agenten",
@@ -197,6 +198,8 @@
     "carrier": "Träger",
     "carriers": "Träger",
     "cash": "Bar",
+    "categories": "Categorias",
+    "category": "Categoría",
     "cc": "CC",
     "center": "Mitte",
     "change": "Veränderung",
@@ -205,6 +208,7 @@
     "charts": "Grafiken",
     "check-table": "Fehlerprüfung Tabelle %1$s",
     "checked": "geprüft",
+    "children": "Niño",
     "children-accounts": "Unterkonten",
     "choose-currency": "Währung auswählen",
     "choose-doc-type": "Dokumenttyp auswählen",
