--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Addresses and contacts",
     "admin": "Admin",
     "administrator": "Administrator",
+    "adult": "Adult",
     "advanced": "Advanced",
     "agent": "Agent",
     "agent-commission-info": "It will only apply to the selected agent",
@@ -197,6 +198,8 @@
     "carrier": "Carrier",
     "carriers": "Carriers",
     "cash": "Cash",
+    "categories": "Categories",
+    "category": "Category",
     "cc": "CC",
     "center": "Center",
     "change": "Change",
@@ -205,6 +208,7 @@
     "charts": "Charts",
     "check-table": "Error checking table '%tableName%'",
     "checked": "Checked",
+    "children": "Children",
     "children-accounts": "Children Accounts",
     "choose-currency": "Choose currency",
     "choose-doc-type": "Choose document type",
@@ -1028,7 +1032,7 @@
     "plugin-needed": "Plugin %pluginName% needed.",
     "plugin-needs-fs-version": "The plugin %pluginName% needs FacturaScripts %minVersion% but you have FacturaScripts %version%",
     "plugin-not-compatible": "The plugin %pluginName% is not compatible with FacturaScripts %version%",
-    "plugin-order": "Orden: %num%",
+    "plugin-order": "Order: %num%",
     "plugin-phpversion-error": "The plugin %pluginName% requires PHP %php% or higher",
     "plugin-removal-disabled": "Plugin removal is disabled on this server",
     "plugin-unsupported-version": "The plugin %pluginName% is for FacturaScripts 2017 or lower, but you are using FacturaScripts %version%.",
@@ -1383,7 +1387,7 @@
     "unit-sale-price": "Unit sale price",
     "unlink": "Unlink",
     "unlink-file": "Unlink file",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "Installation cleared registry successfully.",
     "unlock-entry": "Unlock",
     "unpaid": "Unpaid",
     "until-accounting-entry": "Until entry",
