--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Helbideak eta kontaktuak",
     "admin": "Administratzailea",
     "administrator": "Administratzailea",
+    "adult": "Heldua",
     "advanced": "Aurreratua",
     "agent": "Agentea",
     "agent-commission-info": "Aukeratutako agenteari bakarrik eragingo dio",
@@ -197,6 +198,8 @@
     "carrier": "Garraiolaria",
     "carriers": "Garraiolariak",
     "cash": "Eskudirua",
+    "categories": "Kategoriak",
+    "category": "Kategoria",
     "cc": "CC",
     "center": "Erdian",
     "change": "Aldatu",
@@ -205,6 +208,7 @@
     "charts": "Irudikapenak",
     "check-table": "Errorea '%tableName%' taula egiaztatzean",
     "checked": "Egiaztatua",
+    "children": "Umea",
     "children-accounts": "Kontu 'semeak'",
     "choose-currency": "Aukeratu txanpona",
     "choose-doc-type": "Aukeratu dokumentu mota",
