--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Adresses et contacts",
     "admin": "Admin",
     "administrator": "administrateur",
+    "adult": "Adulto",
     "advanced": "Avancé",
     "agent": "Agent",
     "agent-commission-info": "Cela s'appliquera uniquement à l'agent sélectionné",
@@ -197,6 +198,8 @@
     "carrier": "Transporteur",
     "carriers": "Les transporteurs",
     "cash": "Effectifs",
+    "categories": "Categories",
+    "category": "Categoria",
     "cc": "CC",
     "center": "Centre",
     "change": "Changer",
@@ -205,6 +208,7 @@
     "charts": "Graphiques",
     "check-table": "Erreur lors de la vérification de la table '%tableName%'",
     "checked": "Vérifié",
+    "children": "Niño",
     "children-accounts": "Comptes enfants",
     "choose-currency": "Choisissez la devise",
     "choose-doc-type": "Sélectionnez le type de document",
