--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Direccións e contactos",
     "admin": "Administrador",
     "administrator": "Administrador",
+    "adult": "Adulto",
     "advanced": "Avanzado",
     "agent": "Axente",
     "agent-commission-info": "Só se aplicará ao axente seleccionado",
@@ -197,6 +198,8 @@
     "carrier": "Transportista",
     "carriers": "Transportistas",
     "cash": "Efectivo",
+    "categories": "Categorias",
+    "category": "Categoría",
     "cc": "CC",
     "center": "Centro",
     "change": "Cambiar",
@@ -205,6 +208,7 @@
     "charts": "Gráficos",
     "check-table": "Error ao comprobar a táboa '%tableName%'",
     "checked": "Comprobado",
+    "children": "Neno",
     "children-accounts": "Contas Fillos",
     "choose-currency": "Elixe moeda",
     "choose-doc-type": "Seleccione o tipo de documento",
