--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Indirizzi e contatti",
     "admin": "Admin",
     "administrator": "amministratore",
+    "adult": "Adulto",
     "advanced": "Avanzado",
     "agent": "Agente",
     "agent-commission-info": "agent-commission-info",
@@ -197,6 +198,8 @@
     "carrier": "Vettore",
     "carriers": "I vettori",
     "cash": "Efectivo",
+    "categories": "Categorias",
+    "category": "Categoría",
     "cc": "CC",
     "center": "Center",
     "change": "cambiamento",
@@ -205,6 +208,7 @@
     "charts": "charts",
     "check-table": "Il controllo degli errori tabella% 1 $ s",
     "checked": "checked",
+    "children": "Niño",
     "children-accounts": "Children Accounts",
     "choose-currency": "Choose currency",
     "choose-doc-type": "Choose document type",
