--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Endereços e Contatos",
     "admin": "Administrador",
     "administrator": "Administrador",
+    "adult": "Adulto",
     "advanced": "Avançado",
     "agent": "Agente",
     "agent-commission-info": "Apenas será de aplicação ao agente selecionado",
@@ -197,6 +198,8 @@
     "carrier": "Transportadora",
     "carriers": "Transportadoras",
     "cash": "Efectivo",
+    "categories": "Categorias",
+    "category": "Categoría",
     "cc": "CC",
     "center": "Center",
     "change": "mudança",
@@ -205,6 +208,7 @@
     "charts": "charts",
     "check-table": "Erro ao verificar a tabela '0'",
     "checked": "Checado",
+    "children": "Niño",
     "children-accounts": "Children Accounts",
     "choose-currency": "Choose currency",
     "choose-doc-type": "Choose document type",
