--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Direccions i contactes",
     "admin": "Administrador",
     "administrator": "Administrador",
+    "adult": "Adult",
     "advanced": "Avançat",
     "agent": "Agent",
     "agent-commission-info": "Només s'aplicarà a l'agent seleccionat",
@@ -197,6 +198,8 @@
     "carrier": "Transportiste",
     "carriers": "Transportistes",
     "cash": "Efectiu",
+    "categories": "Categorias",
+    "category": "Categoría",
     "cc": "CC",
     "center": "Centre",
     "change": "Canviar",
@@ -205,6 +208,7 @@
     "charts": "Gràfiques",
     "check-table": "Erro al comprovar la taula '%tableName%'",
     "checked": "Comprovat",
+    "children": "Xiquet",
     "children-accounts": "Contes fills",
     "choose-currency": "Selecciona la moneda",
     "choose-doc-type": "Seleccionar el tipo de document",
