--- a/Core/Translation/es_CO.json
+++ b/Core/Translation/es_CO.json
@@ -63,6 +63,7 @@
     "addresses-and-contacts": "Direcciones y contactos",
     "admin": "Administrador",
     "administrator": "Administrador",
+    "adult": "Adulto",
     "advanced": "Avanzado",
     "agent": "Agente",
     "agent-commission-info": "Sólo se aplicará al agente seleccionado",
@@ -197,6 +198,8 @@
     "carrier": "Transportadora",
     "carriers": "Transportadoras",
     "cash": "Efectivo",
+    "categories": "Categorias",
+    "category": "Categoría",
     "cc": "CC",
     "center": "Centro",
     "change": "Cambiar",
@@ -205,6 +208,7 @@
     "charts": "Gráficos",
     "check-table": "Error al comprobar la tabla '%tableName%'",
     "checked": "Comprobado",
+    "children": "Niño",
     "children-accounts": "Cuentas Hijos",
     "choose-currency": "Elige divisa",
     "choose-doc-type": "Seleccionar el tipo de documento",
