--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -338,11 +338,11 @@
     "customize": "Pertsonalizatu",
     "daily": "Egunero",
     "dasboard-backup-li1": "FacturaScripts ezabatzen edo desinstalatzen baduzu, datuak galduko dituzu.",
-    "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
-    "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
+    "dasboard-backup-li2": "XAMPP ezabatzen edo desinstalatzen baduzu, datuak galduko dituzu.",
+    "dasboard-backup-li3": "PCa galdu, formateatu edo suntsitzen baduzu, datuak galduko dituzu.",
     "dashboard": "Arbela",
-    "dashboard-backup": "Copia de seguridad",
-    "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
+    "dashboard-backup": "Segurtasun kopia",
+    "dashboard-backup-p": "Gogorarazten dizugu FacturaScripts zure ordenagailuan instalatuta duzula, beraz, datuak (fakturak, bezeroak, etab...) zure ordenagailuan gordetzen dira eta zure ordenagailuan bakarrik. Babeskopiak egin eta ordenagailutik urrun gorde kopia horiek.",
     "dashboard-for": "%company%-ren arbela",
     "data-source": "Jatorrizko datuak",
     "database": "Datu basea",
@@ -524,7 +524,7 @@
     "exercise-date-out-range": "Data ez dago ekitaldiaren aldian.",
     "exercise-date-range-exists": "(%start% - %end%) data-tarte horretan ekitaldi bat dago dagoeneko",
     "exercise-not-found": "Ekitaldia ez da aurkitu.",
-    "exercise-without-accounting-plan": "El ejercicio %exercise% todavía no tiene plan contable",
+    "exercise-without-accounting-plan": "%exercice% ariketak ez du oraindik kontu-planik",
     "exercises": "Ekitaldiak",
     "exit": "Irten",
     "expedient": "Espediente",
@@ -592,7 +592,7 @@
     "from-subaccount": "Azpikontutik",
     "full-access": "Erabateko sarbidea",
     "full-path": "Bide-izen osoa",
-    "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found": "Hutsune bat aurkitu da %number%, egun %date%, %codeseries% eta enpresa %idcompany%",
     "general": "Orokorra",
     "general-concepts": "Kontzeptu orokorrak",
     "general-data": "Datu orokorrak",
@@ -770,8 +770,8 @@
     "last-block": "Azkenengo blokea",
     "last-ip": "Azken IPa",
     "last-month": "Aurreko hilabetean",
-    "last-price-estimation": "Última precio de presupuesto",
-    "last-price-sale": "Último precio de venta",
+    "last-price-estimation": "Azken aurrekontuaren prezioa",
+    "last-price-sale": "Azken salmentaren prezioa",
     "last-purchase-price": "Azken erosketa prezioa",
     "last-quarter": "Aurreko lauhilekoan",
     "last-semester": "Aurreko seihilekoan",
@@ -820,7 +820,7 @@
     "logs": "Log-ak",
     "long": "Luzea",
     "longitude": "Luzera",
-    "look-for-gaps": "Buscar huecos",
+    "look-for-gaps": "Hutsuneak bilatu",
     "lot": "Lotea",
     "low-security": "Segurtasun gutxi",
     "machine": "Makina",
@@ -907,7 +907,7 @@
     "no-data": "Ez dago daturik",
     "no-data-received-form": "Ez da inprimaki bidez daturik jaso",
     "no-extra-lines": "Ez gehitu lerro gehigarriak",
-    "no-gaps-found": "Ningún hueco encontrado",
+    "no-gaps-found": "Ez da hutsunerik aurkitu",
     "no-invoice": "Fakturarik gabe",
     "no-outstanding-amount": "Ez dago zenbatekorik zain",
     "no-print-permission": "Ez duzu inprimatzeko edo esportatzeko baimenik",
@@ -949,7 +949,7 @@
     "only-suspended": "Baliogabetuak bakarrik",
     "open": "Ireki",
     "open-exercise": "Ekitaldia ireki",
-    "open-tab": "Abrir en una nueva pestaña",
+    "open-tab": "Ireki fitxa berri batean",
     "opened": "Irekita",
     "opening-acounting-completed": "Ekitaldi irekitze zuzena",
     "opening-operation": "Irekitzea",
@@ -1032,7 +1032,7 @@
     "plugin-needed": "%pluginName% plugina behar da.",
     "plugin-needs-fs-version": "%plugin% pluginak FacturaScripts %minVersion% behar du baina FacturaScritps %version% duzu instalatuta",
     "plugin-not-compatible": "%pluginName% plugina ez da bateragarria FacturaScripts %version%rekin.",
-    "plugin-order": "Orden: %num%",
+    "plugin-order": "Eskaera: %num%",
     "plugin-phpversion-error": "%pluginName% pluginak PHP %php% edo handiagoa behar du",
     "plugin-removal-disabled": "Plugin ezabapena desaktibatuta dago zerbitzari honetan",
     "plugin-unsupported-version": "%plugin% plugina FacturaScripts 2017 edo baxuagorentzat da, baina FacturaScritps %version% erabiltzen ari zara",
@@ -1387,7 +1387,7 @@
     "unit-sale-price": "Unitateko salmenta prezioa",
     "unlink": "Deskonektatu",
     "unlink-file": "Artxiboa lokabetu",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "Instalazioa ondo ezabatu da erregistrotik.",
     "unlock-entry": "Desblokeatu",
     "unpaid": "Ordaindu gabe",
     "until-accounting-entry": "Idazpenara arte",
