Modificadas las descripciones y observaciones para los campos de subcuentas de las cuentas bancarias de forma que eviten confusiones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1134,6 +1134,8 @@
     "reject": "Rechazar",
     "rejected": "abgelehnt",
     "related": "verbunden",
+    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "Neuladen",
     "remove-filter": "Filter löschen",
     "remove-from-list": "Löschen",
