--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1134,6 +1134,8 @@
     "reject": "Rebutjar",
     "rejected": "Rebutjat",
     "related": "Relacionat",
+    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "Recarregant...",
     "remove-filter": "Eliminar filtre",
     "remove-from-list": "Treure",
