--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1134,6 +1134,8 @@
     "reject": "Reject",
     "rejected": "Rejected",
     "related": "Related",
+    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "Reloading...",
     "remove-filter": "Remove filter",
     "remove-from-list": "Remove",
