--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -528,7 +528,7 @@
     "exercises": "Ejercicios",
     "exit": "Salir",
     "expedient": "Expediente",
-    "expense-subaccount": "Subcuenta de gastos",
+    "expense-subaccount": "Subcuenta para gastos bancarios",
     "expenses": "Gastos",
     "expiration": "Vencimiento",
     "expiration-type": "Tipo de vencimiento",
@@ -1134,6 +1134,8 @@
     "reject": "Rechazar",
     "rejected": "Rechazado",
     "related": "Relacionado",
+    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "Recargando...",
     "remove-filter": "Eliminar filtro",
     "remove-from-list": "Quitar",
