--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1134,6 +1134,8 @@
     "reject": "Rechazar",
     "rejected": "Rejeté",
     "related": "Associé",
+    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "Rechargement",
     "remove-filter": "Supprimer le filtre",
     "remove-from-list": "Supprimer",
