--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1134,6 +1134,8 @@
     "reject": "Rechazar",
     "rejected": "rejected",
     "related": "related",
+    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "reloading",
     "remove-filter": "remove-filter",
     "remove-from-list": "remove-from-list",
