--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1134,6 +1134,8 @@
     "reject": "Rechazar",
     "rejected": "Rebutjat",
     "related": "related",
+    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
+    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
     "reloading": "Recarregant...",
     "remove-filter": "remove-filter",
     "remove-from-list": "Treure",
