--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1134,8 +1134,8 @@
     "reject": "Rebutjar",
     "rejected": "Rebutjat",
     "related": "Relacionat",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-bank-charges": "Subcompte relacionat per a despeses bancàries (comissions, etc)",
+    "related-subaccount-purchases-sales": "Subcompte relacionat per a compres i vendes",
     "reloading": "Recarregant...",
     "remove-filter": "Eliminar filtre",
     "remove-from-list": "Treure",
