--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1134,8 +1134,8 @@
     "reject": "Baztertu",
     "rejected": "Ukatua",
     "related": "Erlazionatuta",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-bank-charges": "Banku-gastuen (komisioak, etab.) lotutako azpikontua",
+    "related-subaccount-purchases-sales": "Erosketetarako eta salmentetarako lotutako azpikontua",
     "reloading": "Kargatzen...",
     "remove-filter": "Iragazkia kendu",
     "remove-from-list": "Kendu",
