--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1134,8 +1134,8 @@
     "reject": "Rexeitar",
     "rejected": "Rexeitado",
     "related": "Relacionado",
-    "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-bank-charges": "Subconta relacionada para gastos bancarios (comisións, etc)",
+    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras e vendas",
     "reloading": "Recargando...",
     "remove-filter": "Eliminar filtro",
     "remove-from-list": "Quitar da lista",
