Actualizadas las traducciones.

--- a/Core/Translation/es_CR.json
+++ b/Core/Translation/es_CR.json
@@ -22,7 +22,7 @@
     "account-dot-code": "Punto para autocompletar ceros. Ejemplo: 11.1 = 1100000001",
     "account-length": "Longitud de subcuenta",
     "account-length-error": "Longitud de subcuenta errónea. La subcuenta %code% debe tener la longitud definida en el ejercicio.",
-    "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
+    "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo %saldo% pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
     "account-parent-error": "La cuenta padre es incorrecta",
     "accounting": "Contabilidad",
     "accounting-accounts": "Cuentas contables",
