--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -985,6 +985,7 @@
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
     "parent-group-loop": "Parent group %parentGroup% causing circular relation.",
     "partnumber": "Artikelnummer",
+    "passenger": "Pasajero",
     "password": "Contraseña",
     "pattern": "Muster",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
