--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -985,6 +985,7 @@
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
     "parent-group-loop": "Parent group %parentGroup% causing circular relation.",
     "partnumber": "Número da peça",
+    "passenger": "Pasajero",
     "password": "Senha",
     "pattern": "pattern",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
