Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -207,6 +207,7 @@
     "chart": "Gràfic",
     "charts": "Gràfiques",
     "check-table": "Error en comprovar la taula '%tableName%'",
+    "check-vies": "Comprovar VIES",
     "checked": "Comprovat",
     "children": "Nen",
     "children-accounts": "Comptes Fills",
@@ -519,6 +520,8 @@
     "estimations": "Pressupostos",
     "exceptions": "Excepcions",
     "excess": "En excés",
+    "exclude-invalid": "Excloure invàlids",
+    "exclude-valid": "Excloure vàlids",
     "exempt": "Exempt",
     "exercise": "Exercici",
     "exercise-date-out-range": "La data no està en el període de l'exercici.",
