--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -207,6 +207,7 @@
     "chart": "Grafik",
     "charts": "Grafiken",
     "check-table": "Fehlerprüfung Tabelle %1$s",
+    "check-vies": "Comprobar VIES",
     "checked": "geprüft",
     "children": "Niño",
     "children-accounts": "Unterkonten",
@@ -519,6 +520,8 @@
     "estimations": "Budget",
     "exceptions": "Ausnahmen",
     "excess": "im Übermaß",
+    "exclude-invalid": "Excluir inválidos",
+    "exclude-valid": "Excluir válidos",
     "exempt": "Befreit",
     "exercise": "Übung",
     "exercise-date-out-range": "Date not in exercise range.",
