--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -207,6 +207,7 @@
     "chart": "Chart",
     "charts": "Charts",
     "check-table": "Error checking table '%tableName%'",
+    "check-vies": "Check VIES",
     "checked": "Checked",
     "children": "Children",
     "children-accounts": "Children Accounts",
@@ -519,6 +520,8 @@
     "estimations": "Estimations",
     "exceptions": "Exceptions",
     "excess": "Excess",
+    "exclude-invalid": "Exclude invalid",
+    "exclude-valid": "Exclude valid",
     "exempt": "Exempt",
     "exercise": "Exercise",
     "exercise-date-out-range": "Date not in exercise range.",
