--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -207,6 +207,7 @@
     "chart": "Gráfico",
     "charts": "Gráficos",
     "check-table": "Error al comprobar la tabla '%tableName%'",
+    "check-vies": "Comprobar VIES",
     "checked": "Comprobado",
     "children": "Niño",
     "children-accounts": "Cuentas auxiliares",
@@ -519,6 +520,8 @@
     "estimations": "Presupuestos",
     "exceptions": "Excepciones",
     "excess": "En exceso",
+    "exclude-invalid": "Excluir inválidos",
+    "exclude-valid": "Excluir válidos",
     "exempt": "Exento",
     "exercise": "Ejercicio",
     "exercise-date-out-range": "La fecha no está en el periodo del ejercicio.",
