--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -207,6 +207,7 @@
     "chart": "Grafikoa",
     "charts": "Irudikapenak",
     "check-table": "Errorea '%tableName%' taula egiaztatzean",
+    "check-vies": "VIES egiaztatu",
     "checked": "Egiaztatua",
     "children": "Umea",
     "children-accounts": "Kontu 'semeak'",
@@ -519,6 +520,8 @@
     "estimations": "Aurrekontuak",
     "exceptions": "Salbuespenak",
     "excess": "Soberan",
+    "exclude-invalid": "Baliogabeak baztertu",
+    "exclude-valid": "Baliozkoak baztertu",
     "exempt": "Salbuetsita",
     "exercise": "Ekitaldia",
     "exercise-date-out-range": "Data ez dago ekitaldiaren aldian.",
