--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -207,6 +207,7 @@
     "chart": "Graphique",
     "charts": "Graphiques",
     "check-table": "Erreur lors de la vérification de la table '%tableName%'",
+    "check-vies": "Comprobar VIES",
     "checked": "Vérifié",
     "children": "Niño",
     "children-accounts": "Comptes enfants",
@@ -519,6 +520,8 @@
     "estimations": "devis",
     "exceptions": "Exceptions",
     "excess": "En excès",
+    "exclude-invalid": "Excluir inválidos",
+    "exclude-valid": "Excluir válidos",
     "exempt": "Exempter",
     "exercise": "Exercice",
     "exercise-date-out-range": "La date ne se trouve pas dans la période de l'exercice.",
