--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -207,6 +207,7 @@
     "chart": "Gráfico",
     "charts": "Gráficos",
     "check-table": "Error ao comprobar a táboa '%tableName%'",
+    "check-vies": "Comprobar VIES",
     "checked": "Comprobado",
     "children": "Neno",
     "children-accounts": "Contas Fillos",
@@ -519,6 +520,8 @@
     "estimations": "Orzamentos",
     "exceptions": "Excepcións",
     "excess": "En exceso",
+    "exclude-invalid": "Excluir inválidos",
+    "exclude-valid": "Excluir válidos",
     "exempt": "Exento",
     "exercise": "Exercicio",
     "exercise-date-out-range": "A data non está no periodo do exercicio.",
