--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -207,6 +207,7 @@
     "chart": "Chart",
     "charts": "charts",
     "check-table": "Il controllo degli errori tabella% 1 $ s",
+    "check-vies": "Comprobar VIES",
     "checked": "checked",
     "children": "Niño",
     "children-accounts": "Children Accounts",
@@ -519,6 +520,8 @@
     "estimations": "budget",
     "exceptions": "exceptions",
     "excess": "excess",
+    "exclude-invalid": "Excluir inválidos",
+    "exclude-valid": "Excluir válidos",
     "exempt": "Esonerare",
     "exercise": "Esercizio",
     "exercise-date-out-range": "La data non corrisponde all'esercizio corrente.",
