--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -207,6 +207,7 @@
     "chart": "Chart",
     "charts": "charts",
     "check-table": "Erro ao verificar a tabela '0'",
+    "check-vies": "Comprobar VIES",
     "checked": "Checado",
     "children": "Niño",
     "children-accounts": "Children Accounts",
@@ -519,6 +520,8 @@
     "estimations": "Estimativas",
     "exceptions": "Exceções",
     "excess": "excess",
+    "exclude-invalid": "Excluir inválidos",
+    "exclude-valid": "Excluir válidos",
     "exempt": "Isentar",
     "exercise": "Exercício",
     "exercise-date-out-range": "Date not in exercise range.",
