--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -207,6 +207,7 @@
     "chart": "Gràfic",
     "charts": "Gràfiques",
     "check-table": "Erro al comprovar la taula '%tableName%'",
+    "check-vies": "Comprobar VIES",
     "checked": "Comprovat",
     "children": "Xiquet",
     "children-accounts": "Contes fills",
@@ -519,6 +520,8 @@
     "estimations": "Presuposts",
     "exceptions": "Excepcions",
     "excess": "excess",
+    "exclude-invalid": "Excluir inválidos",
+    "exclude-valid": "Excluir válidos",
     "exempt": "Exent",
     "exercise": "Eixercici",
     "exercise-date-out-range": "La data no pertany al periodo de l'eixercici.",
