Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -690,7 +690,7 @@
     "insert-update": "Afegir o modificar",
     "installed": "instal·lat",
     "installed-plugins": "Instal·lats",
-    "installer": "Instal·lador de FacturaScripts 2018",
+    "installer": "Instal·lador",
     "installer-p": "Benvingut a l'instal·lador de FacturaScripts. Omple els camps necessaris per a connectar a la base de dades.",
     "installer-requirements": "Les següents extensions i funcions són necessàries per FacturaScripts:",
     "integrity-check": "Verificació d'integritat",
