Corregido el código para ocultar los datos bancarios de la forma de pago cuando imprimir = false.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "Preu + impostos",
     "principal": "Principal",
     "print": "Imprimir",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Imprimeix tots els registres",
     "print-export-options": "Opcions d'impressió i exportació",
     "print-list-of-records": "Imprimeix la llista de registres",
