--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "Preis + Steuer",
     "principal": "Main",
     "print": "Drucken",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Alle Datensätze drucken",
     "print-export-options": "Druck- und Exportoptionen",
     "print-list-of-records": "Liste der Datensätze drucken",
