--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "Price with tax",
     "principal": "Main",
     "print": "Print",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Print all records",
     "print-export-options": "Print and Export Options",
     "print-list-of-records": "Print list of records",
