--- a/Core/Translation/es_AR.json
+++ b/Core/Translation/es_AR.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "Precio + impuestos",
     "principal": "Principal",
     "print": "Imprimir",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Imprimir todos los registros",
     "print-export-options": "Opciones de imprimir y exportar",
     "print-list-of-records": "Imprimir lista de registros",
