--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "Prezioa + zergak",
     "principal": "Nagusia",
     "print": "Inprimatu",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Inprimatu erregistro guztiak",
     "print-export-options": "Inprimaketa eta esportazio aukerak",
     "print-list-of-records": "Inprimatu erregistroen zerrenda",
