--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "Prix TTC",
     "principal": "Principale",
     "print": "Impression",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Imprimer tous les enregistrements",
     "print-export-options": "Options d'impression et d'exportation",
     "print-list-of-records": "Imprimer la liste des enregistrements",
