--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "price-with-tax",
     "principal": "Principale",
     "print": "Stampare",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Stampa tutti i record",
     "print-export-options": "Stampa ed esporta opzioni",
     "print-list-of-records": "Stampa l'elenco dei record",
