--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "price-with-tax",
     "principal": "a Principal",
     "print": "Impressão",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Imprimir todos os registros",
     "print-export-options": "Opções de impressão e exportação",
     "print-list-of-records": "Imprimir lista de registros",
