--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "Preu + impostos",
     "principal": "Principal",
     "print": "Imprimir",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Imprimir tots els registres",
     "print-export-options": "Opcions d'impressió i d'exportació",
     "print-list-of-records": "Imprimix el llistat de registres",
