--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1062,6 +1062,7 @@
     "price-with-tax": "prezo con impostos",
     "principal": "Principal",
     "print": "Imprimir",
+    "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Imprimir todos os rexistros",
     "print-export-options": "Opcións de impresión e exportación",
     "print-list-of-records": "Imprimir lista de rexistros",
