Añadido mensaje adicional al comprobar que un asiento está descuadrado.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% R.E.",
     "percentage-vat": "% Impost",
     "period": "Període",
+    "personalized": "Personalizado",
     "phase": "Fase",
     "phone": "Telèfon",
     "phone2": "Telèfon 2",
@@ -1386,6 +1387,7 @@
     "type-success": "Tipus correcte",
     "type-warning": "Tipus advertència",
     "unbalance": "Desquadrament",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Sense comprovar",
     "under-minimums": "Sota mínims",
     "undo": "Desfer",
