--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% Zuschlag",
     "percentage-vat": "% MwSt",
     "period": "Periode",
+    "personalized": "Personalizado",
     "phase": "Fase",
     "phone": "Telefon",
     "phone2": "Telefon 2",
@@ -1386,6 +1387,7 @@
     "type-success": "type-success",
     "type-warning": "Type warning",
     "unbalance": "Unbalance",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "unchecked",
     "under-minimums": "under-minimums",
     "undo": "Rückgängig machen",
