--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% Surcharge",
     "percentage-vat": "% VAT",
     "period": "Period",
+    "personalized": "Personalizado",
     "phase": "Phase",
     "phone": "Phone",
     "phone2": "Phone 2",
@@ -1386,6 +1387,7 @@
     "type-success": "Type success",
     "type-warning": "Type warning",
     "unbalance": "Unbalance",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Unchecked",
     "under-minimums": "Under minimums",
     "undo": "Undo",
