--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% BE",
     "percentage-vat": "BEZ %",
     "period": "Denboraldia",
+    "personalized": "Personalizado",
     "phase": "Fasea",
     "phone": "Telefonoa",
     "phone2": "2. telefonoa",
@@ -1386,6 +1387,7 @@
     "type-success": "Mota zuzena",
     "type-warning": "Ohar mota",
     "unbalance": "Deskuadrea",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Egiaztatu gabe",
     "under-minimums": "Minimoaren azpitik",
     "undo": "Desegin",
