--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% Supplément",
     "percentage-vat": "% TVA",
     "period": "Période",
+    "personalized": "Personalizado",
     "phase": "Phase",
     "phone": "téléphone",
     "phone2": "Téléphone 2",
@@ -1386,6 +1387,7 @@
     "type-success": "type succès",
     "type-warning": "Type avertissement",
     "unbalance": "Déséquilibre",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Non vérifié",
     "under-minimums": "Sous les minima",
     "undo": "annuler",
