--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% Surcharge",
     "percentage-vat": "% VAT",
     "period": "period",
+    "personalized": "Personalizado",
     "phase": "phase",
     "phone": "telefono",
     "phone2": "Telefono 2",
@@ -1386,6 +1387,7 @@
     "type-success": "type-success",
     "type-warning": "Type warning",
     "unbalance": "Unbalance",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "unchecked",
     "under-minimums": "under-minimums",
     "undo": "Disfare",
