--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% Surcharge",
     "percentage-vat": "% VAT",
     "period": "Período",
+    "personalized": "Personalizado",
     "phase": "Fase",
     "phone": "telefone",
     "phone2": "Telefone 2",
@@ -1386,6 +1387,7 @@
     "type-success": "type-success",
     "type-warning": "Type warning",
     "unbalance": "Unbalance",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Sem checar",
     "under-minimums": "under-minimums",
     "undo": "Desfazer",
