--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% de R.E.",
     "percentage-vat": "% Impost",
     "period": "Periodo",
+    "personalized": "Personalizado",
     "phase": "phase",
     "phone": "Teléfon",
     "phone2": "Teléfon 2",
@@ -1386,6 +1387,7 @@
     "type-success": "type-success",
     "type-warning": "Tipo advertència",
     "unbalance": "Desquadre",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Sense comprovar",
     "under-minimums": "under-minimums",
     "undo": "Desfés",
