--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% Recargo",
     "percentage-vat": "% Impuesto",
     "period": "Periodo",
+    "personalized": "Personalizado",
     "phase": "Fase",
     "phone": "Teléfono",
     "phone2": "Teléfono 2",
@@ -1386,6 +1387,7 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "No comprobado",
     "under-minimums": "Bajo mínimos",
     "undo": "Deshacer",
