--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1015,6 +1015,7 @@
     "percentage-surcharge": "% R. E.",
     "percentage-vat": "% IVE",
     "period": "Periodo",
+    "personalized": "Personalizado",
     "phase": "Fase",
     "phone": "Teléfono",
     "phone2": "Teléfono 2",
@@ -1386,6 +1387,7 @@
     "type-success": "Tipo correcto",
     "type-warning": "Tipo advertencia",
     "unbalance": "Descuadre",
+    "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "Non comprobado",
     "under-minimums": "Baixo mínimos",
     "undo": "Desfacer",
