Pequeñas correcciones al PR de la fecha de devengo.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -47,6 +47,7 @@
     "accounting-reports": "Buchhaltungsberichte",
     "accounting-within-regularization": "In diesem Zeitraum gibt es bereits eine steuerliche Regularisierung. Es können keine Änderungen vorgenommen werden.",
     "accounts": "Konten",
+    "accrual-date": "Fecha devengo",
     "action": "Aktion",
     "actions": "Aktionen",
     "active": "Aktiv",
