--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -47,6 +47,7 @@
     "accounting-reports": "Accounting reports",
     "accounting-within-regularization": "There is already a tax regularization in this period. No changes can be made.",
     "accounts": "Accounts",
+    "accrual-date": "Fecha devengo",
     "action": "Action",
     "actions": "Actions",
     "active": "Active",
