--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -47,6 +47,7 @@
     "accounting-reports": "Kontabilitate txostenak",
     "accounting-within-regularization": "Zergen erregularizazio bat ba dago denboraldi honetarako. Ezin dira aldaketak egin.",
     "accounts": "Kontuak",
+    "accrual-date": "Fecha devengo",
     "action": "Ekintza",
     "actions": "Ekintzak",
     "active": "Aktiboa",
