--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -47,6 +47,7 @@
     "accounting-reports": "Rapports de comptabilité",
     "accounting-within-regularization": "L'entrée comptable est dans une régularisation de %taxe%. Elle ne peut pas être supprimée.",
     "accounts": "Comptes",
+    "accrual-date": "Fecha devengo",
     "action": "Action",
     "actions": "actions",
     "active": "Actif",
