--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -47,6 +47,7 @@
     "accounting-reports": "Rapporti contabili",
     "accounting-within-regularization": "The accounting entry is within a regularization of %tax%. It can't be deleted.",
     "accounts": "conti",
+    "accrual-date": "Fecha devengo",
     "action": "Azione",
     "actions": "azioni",
     "active": "Attivo",
