--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -47,6 +47,7 @@
     "accounting-reports": "Relatórios de contabilidade",
     "accounting-within-regularization": "O registo contábil está dentro de uma regularização de %tax%. Não pode ser excluído.",
     "accounts": "Contas",
+    "accrual-date": "Fecha devengo",
     "action": "Ação",
     "actions": "Ações",
     "active": "Ativo",
