--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -47,6 +47,7 @@
     "accounting-reports": "Informes comptables",
     "accounting-within-regularization": "Ja hi ha una regularització d'impostos en aquest període. No es poden fer canvis.",
     "accounts": "Contes",
+    "accrual-date": "Fecha devengo",
     "action": "Acció",
     "actions": "Accions",
     "active": "Actiu",
