--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -47,6 +47,7 @@
     "accounting-reports": "Informes contables",
     "accounting-within-regularization": "Ya hay una regularización de impuestos en este periodo. No se pueden hacer cambios.",
     "accounts": "Cuentas",
+    "accrual-date": "Fecha devengo",
     "action": "Acción",
     "actions": "Acciones",
     "active": "Activo",
